--- a/blocks/list/__task/list__task.css
+++ b/blocks/list/__task/list__task.css
@@ -1,3 +1,8 @@
 .list__task {
-
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  max-width: 1200px;
+  padding: 5px;
+  border: 1px solid rgba(54, 54, 54, 0.7);
 }
