--- a/blocks/header/__image/header__image.css
+++ b/blocks/header/__image/header__image.css
@@ -1,5 +1,11 @@
 .header__image {
-  width: 100%;
+  max-width: 150px;
   box-sizing: border-box;
   object-fit: cover;
+}
+
+@media screen and (max-width: 568px) {
+  .header__image {
+    max-width: 100px;
+  }
 }
