--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -8,3 +8,15 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 1060px) {
+  .header__subtitle {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .header__subtitle {
+    font-size: 12px;
+  }
+}
