--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -8,3 +8,17 @@
   margin: 0 0 10px;
   padding: 0;
 }
+
+@media screen and (max-width: 1060px) {
+  .header__title {
+    font-size: 48px;
+    margin-bottom: 8px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .header__title {
+    font-size: 35px;
+    margin-bottom: 6px;
+  }
+}
