--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  width: 100%;
+  max-width: 90%;
   border-bottom: 1px solid rgba(54, 54, 54, 0.7);
   display: flex;
   justify-content: space-between;
