--- a/blocks/list/__name/list__name.css
+++ b/blocks/list/__name/list__name.css
@@ -5,6 +5,13 @@
   line-height: 1.2;
   opacity: .8;
   text-rendering: optimizeLegibility;
+  text-align: center;
   margin: 0;
   padding: 0
+}
+
+@media screen and (max-width: 1060px) {
+  .list__name {
+    font-size: 15px;
+  }
 }
