--- a/blocks/list/__task/list__task.css
+++ b/blocks/list/__task/list__task.css
@@ -1,8 +1,10 @@
 .list__task {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   list-style: none;
-  max-width: 1200px;
-  padding: 5px;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 5px 10px;
   border: 1px solid rgba(54, 54, 54, 0.7);
 }
