--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,7 +1,13 @@
 .main {
-  max-width: 1280px;
+  max-width: 90%;
   display: grid;
   grid-row-gap: 30px;
   margin: 30px auto 250px;
   padding: 0;
+}
+
+@media screen and (max-width: 1060px) {
+  .main {
+    grid-row-gap: 15px;
+  }
 }
