--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -11,3 +11,9 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
 }
+
+@media screen and (max-width: 1060px) {
+  .page {
+    padding-top: 0;
+  }
+}
