--- a/blocks/tasks/__button/tasks__button.css
+++ b/blocks/tasks/__button/tasks__button.css
@@ -2,7 +2,20 @@
   max-width: 180px;
   color: #fff;
   background-color: #000;
+  font-size: 14px;
   padding: 10px;
   margin: 0;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1060px) {
+  .tasks__button {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .tasks__button {
+    max-width: 100px;
+  }
 }
