--- a/pages/index.css
+++ b/pages/index.css
@@ -12,7 +12,7 @@
 @import url(../blocks/header/__text/header__text.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
-@import url(../blocks/header/__subtitle/header__subtitle.css);
+@import url(../blocks/header/__image/header__image.css);
 
 /* main */
 @import url(../blocks/main/main.css);
@@ -25,9 +25,9 @@
 @import url(../blocks/list/__task/list__task.css);
 @import url(../blocks/list/__image/list__image.css);
 @import url(../blocks/list/__name/list__name.css);
-@import url(../blocks/list/__container/list__container.css);
 @import url(../blocks/list/__default/list__default.css);
-@import url(../blocks/list/__checkbox/list__checkbox.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/list/__button-completed/list__button-completed.css);
 @import url(../blocks/list/__button-bin/list__button-bin.css);
 
 /* tasks */
