--- a/blocks/list/__task/list__task.css
+++ b/blocks/list/__task/list__task.css
@@ -6,5 +6,10 @@
   box-sizing: border-box;
   width: 100%;
   padding: 5px 10px;
+  margin-bottom: 10px;
   border: 1px solid rgba(54, 54, 54, 0.7);
+}
+
+.list__task:last-child {
+  margin-bottom: 0;
 }
